# fast_zero_sync

./: :memory  README.md  alembic.ini  pyproject.toml
fast_zero/: app.py  database.py  schemas.py  security.py  settings.py
migrations/versions/: 128163f2d194_create_users_table.py  18cedd37a772_aupdated_users_updated_at.py
tests/: conftest.py  test_app.py  test_db.py
